View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023130 | Open CASCADE | OCCT:DRAW | public | 2012-05-03 18:05 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | none | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Product Version | 6.5.2 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023130: command "maxtolerance" doesn't work on Windows | ||||
Description | command "maxtolerance" doesn't work on Windows platform | ||||
Tags | No tags attached. | ||||
Test case number | bugs demo(001) bug23130 | ||||
|
The branch CR23130 is ready to review. The WNT macros is defined when user works with Windows. |
|
No remarks |
|
maxtol command returns incorrect values of variables nbFaces, nbEdges and nbVtx. |
|
The branch CR23130_1 is ready to review. |
|
Dear BugMaster, Branch CR23130_1 (and master from occt GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs demo(001) bug23130 - OK. |
|
Please explain why number of entities reported by this command was considered incorrect. See also 0023562 |
|
Existing maxtolerance command returns: ================================================================== box b 100 100 100 maxtolerance b ## Tolerances on the shape b (nbFaces:6 nbEdges:24 nbVtx:48) Face : Min 1.00000e-07 Max 1.00000e-07 Edge : Min 1.00000e-07 Max 1.00000e-07 Vertex : Min 1.00000e-07 Max 1.00000e-07 ================================================================== New command returns: ================================================================== box b 100 100 100 maxtolerance b ## Tolerances on the shape b (nbFaces:6 nbEdges:12 nbVtx:8) Face : Min 1.00000e-07 Max 1.00000e-07 Edge : Min 1.00000e-07 Max 1.00000e-07 Vertex : Min 1.00000e-07 Max 1.00000e-07 ================================================================== I think that is more correct. |
|
Agreed, command explode also uses map to avoid repeating sub-shapes. No remarks, please test |
occt: master 581971fe 2012-11-23 11:33:47
|
0023130: command "maxtolerance" doesn't work on Windows maxtol command returns incorrect values of variables nbFaces, nbEdges and nbVtx. Test case for this bug |
Affected Issues 0023130 |
|
mod - src/BRepTest/BRepTest_BasicCommands.cxx | Diff File | ||
add - tests/bugs/demo/bug23130 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-05-03 18:05 |
|
New Issue | |
2012-05-03 18:05 |
|
Assigned To | => jgv |
2012-11-08 12:34 |
|
Assigned To | jgv => nbv |
2012-11-08 17:44 |
|
Note Added: 0022158 | |
2012-11-08 17:44 |
|
Assigned To | nbv => jgv |
2012-11-08 17:44 |
|
Status | new => resolved |
2012-11-08 17:48 |
|
Note Edited: 0022158 | |
2012-11-09 09:26 |
|
Note Edited: 0022158 | |
2012-11-14 15:00 |
|
Note Added: 0022239 | |
2012-11-14 15:00 |
|
Status | resolved => reviewed |
2012-11-14 19:16 |
|
Assigned To | jgv => mkv |
2012-11-15 08:53 |
|
Note Edited: 0022158 | |
2012-11-16 12:24 |
|
Assigned To | mkv => nbv |
2012-11-16 12:25 |
|
Status | reviewed => assigned |
2012-11-16 12:27 |
|
Note Added: 0022275 | |
2012-11-16 13:11 |
|
Assigned To | nbv => jgv |
2012-11-16 13:12 |
|
Note Added: 0022276 | |
2012-11-16 13:12 |
|
Status | assigned => resolved |
2012-11-19 18:31 |
|
Note Added: 0022299 | |
2012-11-19 18:31 |
|
Test case number | => bugs demo(001) bug23130 |
2012-11-20 12:10 |
|
Assigned To | jgv => abv |
2012-11-20 12:52 |
|
Note Added: 0022307 | |
2012-11-20 12:52 |
|
Assigned To | abv => nbv |
2012-11-20 12:52 |
|
Status | resolved => assigned |
2012-11-20 13:48 |
|
Assigned To | nbv => abv |
2012-11-20 13:58 |
|
Note Added: 0022308 | |
2012-11-20 14:45 |
|
Status | assigned => resolved |
2012-11-20 14:46 |
|
Note Added: 0022310 | |
2012-11-20 14:46 |
|
Assigned To | abv => bugmaster |
2012-11-20 14:46 |
|
Status | resolved => reviewed |
2012-11-20 14:53 |
|
Assigned To | bugmaster => mkv |
2012-11-20 14:53 |
|
Assigned To | mkv => bugmaster |
2012-11-20 14:53 |
|
Status | reviewed => tested |
2012-11-22 11:18 |
|
Target Version | => 6.6.0 |
2012-11-26 15:45 |
|
Changeset attached | => occt master 581971fe |
2012-11-26 15:45 |
|
Assigned To | bugmaster => nbv |
2012-11-26 15:45 |
|
Status | tested => verified |
2012-11-26 15:45 |
|
Resolution | open => fixed |
2012-12-10 17:16 |
|
Changeset attached | => occt master 581971fe |
2013-04-23 13:37 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |