0023130: command "maxtolerance" doesn't work on Windows

maxtol command returns incorrect values of variables nbFaces, nbEdges and nbVtx.
Test case for this bug